# ultra-parquet-converter

./: .gitignore  .npmignore  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.es.md  README.md  cli.js  index.js  jest.config.cjs  package-lock.json  package.json  pyproject.toml  test.js  tsconfig.json  tsconfig.test.json
.github/: publish.yml  test.yml
.github/workflows/: ci.yml  release.yml
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/src/: index.html  index.ts.html
coverage/src/: index.html  index.ts.html
coverage/src/backends/: cython-backend.ts.html  index.html  native-python.ts.html  portable-python.ts.html  pyodide-backend.ts.html  selector.ts.html
coverage/src/utils/: detect.ts.html  (+2 more)
cython/: __init__.py  fast_csv.c  fast_csv.pyx  fast_parser.c  fast_parser.pyx  setup.py
docs/: ARCHITECTURE.md
examples/: advanced-features.ts  backend-selection.ts  basic-usage.ts
python/: converter.py  converter_advanced.py  pyodide_convert.py  requirements.txt
src/: cli.js  cli.ts  index.js  index.ts  setup.js
src/backends/: cython-backend.ts  native-python.ts  portable-python.ts  pyodide-backend.ts  selector.ts
src/types/: index.ts
src/utils/: detect.ts  download.ts  progress.ts  python-runner.ts  runtime.ts
test/: backends.test.ts  detect.test.ts  download.test.ts  integration.test.ts  native-python-mocked.test.ts  native-python.test.ts  python-runner.test.ts  runtime.test.ts  selector.test.ts  tsconfig.json
test/helpers/: python-env.ts
web/: index.html  pyodide-loader.js  styles.css  worker.js
(+9 files in other folders)
