[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-parquet-converter"
version = "1.3.0"
description = "High-performance Parquet converter with Cython optimizations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hepein Oficial x Brashkie", email = "electronicatodo2006@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "Cython>=3.0.0",
]

[project.optional-dependencies]
all = [
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "fastavro>=1.8.0",
    "pyreadstat>=1.2.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["cython"]

[tool.cython]
language_level = "3"